docs/versioned_docs/version-2.0.0/reference/utils.mdx
<!-- Generated by port_legacy_docs.py v1 from v2.0.0 (ab4d7f0208fff3167819ec2464ddd38f91ceb401). Historical snapshot—do not edit directly. -->

<a id="utilities"></a>
# Utilities

This page documents top-level helper utilities shipped with `slackblocks`.

## Block Kit Builder URL {#block-kit-builder-url}

`block_kit_builder_url(payload, team_id=None)` builds a [Slack Block Kit Builder](https://app.slack.com/block-kit-builder) URL containing the supplied payload, so you can preview a message, view, or block list in the browser.

Accepted payload shapes:

- A single [`Block`](/v2.0.0/reference/blocks) — wrapped in `{"blocks": [block]}` automatically.
- A list of `Block` — also wrapped.
- Anything with a `_resolve()` method ([`Message`](/v2.0.0/reference/messages), [`WebhookMessage`](/v2.0.0/reference/messages), [`MessageResponse`](/v2.0.0/reference/messages), [`View`](/v2.0.0/reference/views), [`ModalView`](/v2.0.0/reference/views), [`HomeTabView`](/v2.0.0/reference/views)).
- A raw `dict` — used verbatim. This is the escape hatch for callers building payloads outside the type hierarchy.

For a `team_id`-specific Builder URL (e.g. `https://app.slack.com/block-kit-builder/T0123#…`), pass `team_id="T0123ABCD"`.

### block_kit_builder_url {#builder.block_kit_builder_url}

**Function**

```python
block_kit_builder_url(payload: Block | list[Block] | Resolvable | dict[str, Any], team_id: str | None = None) -> str
```

<div className="api-docstring">

Build a URL that opens ``payload`` in Slack's Block Kit Builder.

Use this to preview a message, view, or list of blocks in the browser
without manually copying JSON into the Builder.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `payload` | `Block \| list[Block] \| Resolvable \| dict[str, Any]` | any of:<br /><br />- A single ``Block`` -- wrapped in ``{"blocks": [block]}``.<br />- A list of ``Block`` -- wrapped in ``{"blocks": [...]}``.<br />- Anything with a ``_resolve`` method (``Message``,<br />``WebhookMessage``, ``MessageResponse``, ``View``,<br />``ModalView``, ``HomeTabView``, etc.) -- used as-is.<br />- A raw ``dict`` -- used as-is. This is the escape hatch for<br />callers building payloads outside the type hierarchy. |
| `team_id` | `str \| None` | optional Slack team ID. When supplied, produces a<br />workspace-specific Builder URL of the form<br />``https://app.slack.com/block-kit-builder/T0123#&lt;JSON&gt;``.<br />When ``None`` (the default), produces the generic URL. |

#### Returns

| Type | Description |
| --- | --- |
| `str` | A fully-formed Block Kit Builder URL. |

#### Examples

Single block::

    from slackblocks import SectionBlock, block_kit_builder_url

    url = block_kit_builder_url(SectionBlock("Hi"))

Multiple blocks::

    url = block_kit_builder_url([
        SectionBlock("Heading"),
        DividerBlock(),
    ])

Existing message::

    url = block_kit_builder_url(my_message)

Targeting a specific workspace::

    url = block_kit_builder_url(my_message, team_id="T0123ABCD")

</div>
## Validation helpers {#validation-helpers}

Lower-level helper functions used across `slackblocks` for validation and coercion. Most users won't need to call these directly, but they're documented here for completeness and for anyone extending `slackblocks` with custom block or element types.

### coerce_to_list {#utils.coerce_to_list}

**Function**

```python
coerce_to_list(object_or_objects: T | list[T] | None, class_: Any | list[Any], allow_none: bool = False, min_size: int | None = None, max_size: int | None = None) -> list[T] | None
```

<div className="api-docstring">

Takes and object or list of objects and validates its contents, ensuring that the
resulting object is a list.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `object_or_objects` | `T \| list[T] \| None` | the Python object or objects to validate and convert to a list. |
| `class_` | `Any \| list[Any]` | the Python type (or class) of objects expected in the list. |
| `allow_none` | `bool` | whether or not None is a valid input (and thus output) option. |
| `min_size` | `int \| None` | if provided, the length of `object_or_objects` cannot be smaller than this. |
| `max_size` | `int \| None` | if provided, the length of `object_or_objects` cannot be larger than this. |

#### Returns

| Type | Description |
| --- | --- |
| `list[T] \| None` | `object_or_objects` if it was a valid list, `[object_or_objects]` if it was a valid<br />object, or `None` if provided and allowed. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks fail. |

</div>

### coerce_to_list_nonnull {#utils.coerce_to_list_nonnull}

**Function**

```python
coerce_to_list_nonnull(object_or_objects: T | list[T], class_: Any | list[Any], min_size: int | None = None, max_size: int | None = None) -> list[T]
```

<div className="api-docstring">

Takes an object or list of objects and validates its contents, ensuring that the
resulting object is a list. This version does not handle None values.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `object_or_objects` | `T \| list[T]` | the Python object or objects to validate and convert to a list. |
| `class_` | `Any \| list[Any]` | the Python type (or class) of objects expected in the list. |
| `min_size` | `int \| None` | if provided, the length of `object_or_objects` cannot be smaller than this. |
| `max_size` | `int \| None` | if provided, the length of `object_or_objects` cannot be larger than this. |

#### Returns

| Type | Description |
| --- | --- |
| `list[T]` | `object_or_objects` if it was a valid list, `[object_or_objects]` if it was a valid object. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks fail. |

</div>

### is_hex {#utils.is_hex}

**Function**

```python
is_hex(string: str) -> bool
```

<div className="api-docstring">

Determines whether a given string is a valid hexadecimal number.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `string` | `str` | the string to examine for hex characters. |

#### Returns

| Type | Description |
| --- | --- |
| `bool` | `True` if the string is a valid hexadecimal number, otherwise `False`. |

</div>

### validate_action_id {#utils.validate_action_id}

**Function**

```python
validate_action_id(action_id: str | None, allow_none: bool = False) -> str | None
```

<div className="api-docstring">

Action IDs are used in the handing of user interactivity within Slack blocks.
This function checks that a given `action_id` is valid as per the requirements
imposed by the Slack API.

See: [https://api.slack.com/interactivity/handling](https://api.slack.com/interactivity/handling)

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `action_id` | `str \| None` | the action_id string to validate for correctness as per the Slack API. |
| `allow_none` | `bool` | whether to accept `None` as a valid value for `action_id`. |

#### Returns

| Type | Description |
| --- | --- |
| `str \| None` | The original value `action_id` if all validation checks pass. |

</div>

### validate_int {#utils.validate_int}

**Function**

```python
validate_int(num: int | None, min_value: int | None = None, max_value: int | None = None, allow_none: bool = False) -> int | None
```

<div className="api-docstring">

Performs basic validation checks against a given integer.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `num` | `int \| None` | the number to validate. |
| `min_value` | `int \| None` | if `num` is less than this value, an error will be thrown. |
| `max_value` | `int \| None` | if `num` is greater than this value, an error will be thrown. |
| `allow_none` | `bool` | whether `None` is a valid value for `num`. If `num` is `None`<br />`allow_none` is `False`, an error will be thrown. |

#### Returns

| Type | Description |
| --- | --- |
| `int \| None` | The original value of `num` if it passes all validation checks. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks fail. |

</div>

### validate_string {#utils.validate_string}

**Function**

```python
validate_string(string: str | None, field_name: str, max_length: int | None = None, min_length: int | None = None, allow_none: bool = False) -> str | None
```

<div className="api-docstring">

Performs basic validation actions (e.g. length checking) on a given string
based on the provided criteria.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `string` | `str \| None` | the string to validate |
| `field_name` | `str` | the name of the field the string belongs to (for error reporting purposes). |
| `min_length` | `int \| None` | if the string is less than this length, an error will be raised. |
| `max_length` | `int \| None` | if the string is greated than this length, an error will be raised. |
| `allow_none` | `bool` | whether `None` is a valid value for the string being validated. |

#### Returns

| Type | Description |
| --- | --- |
| `str \| None` | The original string if it deemed to be valid (i.e. no errors are thrown). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the validation checks (length, `None`) fail. |

</div>
